--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
     ],
     "require": {
         "php": "^7.1",
-        "illuminate/database": "^5.8",
-        "illuminate/mail": "^5.8"
+        "illuminate/database": "^5.8|^6.0",
+        "illuminate/mail": "^5.8|^6.0"
     },
     "require-dev": {
         "larapack/dd": "^1.0",
